[tool.poetry]
name = "herfindahl-index"
version = "0.1.0"
description = ""
authors = ["Quentin Mowat-Amiet <qmowatamiet@iese.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
